--- a/bhagwat-gita.ipynb
+++ b/bhagwat-gita.ipynb
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
     }
    ],
    "source": [
-    "docs[0].page_content[:1000]"
+    "docs[0].page_content[:1000]\n"
    ]
   },
   {
